# website

./: .dockerignore  .env  .gitignore  .gitmodules  .pre-commit-config.yaml  404.qmd  Dockerfile  Makefile  README.md  _quarto.yml  about.qmd  compose.yaml  defs.typ  docker-compose.yaml  hugo.toml  includes.html  index.qmd  pyproject.toml  remark42.html  robots.txt  style.css
.github/: copilot-instructions.md
content/teaching/intermediate-ml/: .gitignore  Makefile  README.md  defs.typ  pyproject.toml  template.typ
content/teaching/intermediate-ml/.github/workflows/: render.yml
content/teaching/intermediate-ml/1a-information/: index.typ
content/teaching/intermediate-ml/1b-mle-map/: index.typ
content/teaching/intermediate-ml/1c-regularization/: index.typ
content/teaching/intermediate-ml/2a-gaussian-linear/: index.typ
content/teaching/intermediate-ml/2b-gaussian-nonlinear/: index.typ
content/teaching/intermediate-ml/2c-quantile/: index.typ
content/teaching/intermediate-ml/2c-quantile/aids/: aids.csv  out.csv  prepare_data.py  quantile_regression.py
content/teaching/intermediate-ml/2c-quantile/boosting/: out.csv  quantile_boosting.py
content/teaching/intermediate-ml/2c-quantile/distributions/: code.py  out.csv
content/teaching/intermediate-ml/2c-quantile/linear/: linear.py  out.csv
content/teaching/intermediate-ml/2c-quantile/nn/: out.csv  quantile_nn.py
content/teaching/intermediate-ml/2c-quantile/robustness/: code.py  out.csv
content/teaching/intermediate-ml/3-density/: index.typ
content/teaching/intermediate-ml/4-exp-family/: index.typ
content/teaching/intermediate-ml/5-glm/: index.typ
content/teaching/intermediate-ml/7-bayesian/: index.typ
content/teaching/intermediate-ml/8-pca/: index.typ
content/teaching/intermediate-ml/9a-linear-algebra/: index.typ
content/teaching/intermediate-ml/9b-distributions/: index.typ
content/teaching/intermediate-ml/assets/: citations.bib  plot.mplstyle
(+91 files in other folders)
