[tool.poetry]
name = "website"
version = "0.1.0"
description = "Vsevolod Shegolev's personal website."
authors = ["Vsevolod Shegolev <v@sheg.cc>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
pydantic = "^1.8.2"
pypugjs = "^5.9.9"
PyYAML = "^6.0"
Markdown = "^3.3.6"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.19.1"
black = "^21.9b0"
pre-commit = "^2.15.0"
pylint = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.pylint]
messages_control.disable = ["E0401", "R0903", "fixme"]
format.max-line-length = 120
