[project]
name = "intermidiate-ml"
version = "0.1.0"
requires-python = ">=3.10"
description = "Intermediate Machine Learning"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "lightning>=2.5.0.post0",
    "scikit-survival>=0.24.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]


[tool.ruff]
line-length = 100

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "pyutils"
